# CustomGarbageCollector

./: CMakeLists.txt  Garbage_collector.cpp  Garbage_collector.h  README.md  alloc_function.cpp  alloc_function.h  basic_memory_allocator_example.cpp  example.cpp  garbage_collector.cpp  garbage_collector.h  main.cpp  memory_allocator.cpp  memory_allocator.h  memory_allocator_garbage_collector.cpp  memory_allocator_garbage_collector.h
